# hello-wgpu

./: Cargo.toml
assets/: shader.wgsl
src/: helpers.rs  lib.rs  main.rs  model.rs  resources.rs  shader.wgsl  texture.rs
