[package]
name = "learn-wgpu"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
chrono = "0.4.31"
fern = { version = "0.6.2", features = ["colored"] }
log = "0.4.20"
pollster = "0.3.0"
wgpu = "0.17.1"
winit = "0.28.7"
image = { version = "0.24.7", default-features = false, features = [
    "png",
    "jpeg",
] }
anyhow = "1.0.75"
